--- a/login.html
+++ b/login.html
@@ -30,13 +30,13 @@
         <label style="padding-top:10px; margin-left: 2px;font-size: 25px; font-family: 'Grenze Gotisch', cursive;">Email: </label>
       </div>
       <div class="col-sm-8">
-        <input class="inputbox" style="color: black" type="email" placeholder="Enter email" id="email"><br>
+        <input class="inputbox" style="color: black" type="email" placeholder="Enter email" id="email" value="kartees@gmail.com"><br>
         </div>
         <div class="col-sm-4">
         <label style="padding-top:10px; margin-left: 2px;font-size: 25px; font-family: 'Grenze Gotisch', cursive;">Password: </label>
       </div>
       <div class="col-sm-8">
-        <input class="inputbox" type="password" id="password" placeholder="Enter password" style="color: black"><br><br>
+        <input class="inputbox" type="password" id="password" placeholder="Enter password" value="12345678" style="color: black"><br><br>
         </div><br><br><br><br>
         <div class="col-sm-12">
         <button class="border" type="submit" id="login" onclick="run()"><a style="color: white; font-family:'Rowdies', cursive; padding:10px 20px">Login</a></button>
